--- a/locales/es.json
+++ b/locales/es.json
@@ -3,6 +3,61 @@
     "claim": "Planifica y controla tu progreso en la Conquista Galáctica"
   },
 
+  "modeSelect.required": "Tarjetas necesarias",
+
+  "keycards.max": "Máximo",
+  "keycards.needed": "Necesarias",
+  "keycards.starred": "Seleccionadas",
+  "keycards.done": "Hechas",
+
+  "sector.nodesKeycards": "Nodos",
+  "sector.nodesKeycardsDescription": "Son las tarjetas que se ganan en cada nodo.",
+
+  "tour.skip": "Saltar",
+  "tour.previous": "Anterior",
+  "tour.next": "Siguiente",
+  "tour.stop": "Salir",
+
+  "tour.newUser.chooseReward": "Elegir recompensa",
+  "tour.newUser.chooseReward.title": "Primero, la recompensa",
+  "tour.newUser.chooseReward.description": "Elige el cofre que deseas obtener.",
+
+  "tour.newUser.keycards.title": "Tu progreso",
+  "tour.newUser.keycards.description": "En esta zona puedes comprobar tu progreso.",
+
+  "tour.newUser.sector.title": "Define tus objetivos",
+  "tour.newUser.sector.description": "Vamos a marcar los logros que queremos hacer.",
+  "tour.newUser.sector.description_2": "Abre el primer Sector.",
+
+  "tour.newUser.open-nodes.title": "Zonas",
+  "tour.newUser.open-nodes.description": "En cada zona de cada Sector puedes definir tus objetivos.",
+
+  "tour.newUser.nodes.title": "Nodos",
+  "tour.newUser.nodes.description": "Define cuantas tarjetas quieres conseguir en los nodos de este Sector.",
+
+  "tour.newUser.zone.title": "Zonas",
+  "tour.newUser.zone.description": "Abre ahora la primera Zona.",
+
+  "tour.newUser.feat.title": "Logros",
+  "tour.newUser.feat.description": "Selecciona los logros que quieres conseguir y márcalos como conseguidos cuando los hayas completado.",
+  "tour.newUser.feat.description_2": "Puedes ponerte comentarios que sólo verás tu.",
+  "tour.newUser.feat.description_3": "Iremos poniendo vídeos para ayudarte a conseguir todos lo logros.",
+
+  "logout": "Salir",
+
+  "index.title": "The Red Crate",
+  "index.go_to_tracker": "Ir al tracker",
+  "index.login": "Identificarse",
+
+  "modal.welcome.title": "Bienvenido a The Red Crate",
+  "modal.welcome.ok": "Adelante",
+  "modal.welcome.cancel": "Aprendo mejor solo",
+  "modal.welcome.first": "Aquí podrás planificar y llevar un seguimiento de los logros de la Conquista Galáctica",
+  "modal.welcome.second": "Déjame enseñarte como funciona",
+
+  "modal.tour.title": "¡Enhorabuena!",
+  "modal.tour.content": "Ya estás listo. Continúa marcando como favoritos todos los logros que quieras conseguir.",
+
   "modeSelect": {
     "label": "Selecciona la dificultad:",
     "placeholder": "Dificultad",
@@ -30,6 +85,112 @@
   },
 
   "SECTOR_1_TITLE": "Sector 1",
+  "HARD_SECTOR_1_NODE_FEAT_1_TITLE": "Evasión anticipada",
+  "HARD_SECTOR_1_NODE_FEAT_1_DESCRIPTION": "Obtén previsión 60 veces",
+  "HARD_SECTOR_1_NODE_FEAT_2_TITLE": "Asalto cegador",
+  "HARD_SECTOR_1_NODE_FEAT_2_DESCRIPTION": "Intenta infligir Cegar 40 veces",
+  "HARD_SECTOR_1_NODE_FEAT_3_TITLE": "El gremio",
+  "HARD_SECTOR_1_NODE_FEAT_3_DESCRIPTION": "Derrota a 50 enemigos con unidades cazarrecompensas",
+  "HARD_SECTOR_1_NODE_FEAT_4_TITLE": "Sin resguardo",
+  "HARD_SECTOR_1_NODE_FEAT_4_DESCRIPTION": "Gana 14 batallas sin tanques en tu escuadrón",
+  "HARD_SECTOR_1_MINIBOSS_FEAT_1_TITLE": "Suerte de quedar en una sola pieza",
+  "HARD_SECTOR_1_MINIBOSS_FEAT_1_DESCRIPTION": "Gana con URoRRuR'R'R con vida",
+  "HARD_SECTOR_1_MINIBOSS_FEAT_2_TITLE": "¡Utinni!",
+  "HARD_SECTOR_1_MINIBOSS_FEAT_2_DESCRIPTION": "Gana con al menos 3 Jawas en tu escuadrón",
+  "HARD_SECTOR_1_BOSS_FEAT_1_TITLE": "Acepto las posibilidades",
+  "HARD_SECTOR_1_BOSS_FEAT_1_DESCRIPTION": "Gana con el Mandaloriano con vida",
+  "HARD_SECTOR_1_BOSS_FEAT_2_TITLE": "Hora de los aficionados",
+  "HARD_SECTOR_1_BOSS_FEAT_2_DESCRIPTION": "Gana sin usar ningún cazarrecompensas en tu escuadrón",
 
-  "SECTOR_1_NODE_FEAT_1_TITLE": "Título S1 F1"
+  "SECTOR_2_TITLE": "Sector 2",
+  "HARD_SECTOR_2_NODE_FEAT_1_TITLE": "Golpe de sifón",
+  "HARD_SECTOR_2_NODE_FEAT_1_DESCRIPTION": "Obtén aumento de robo de salud 20 veces",
+  "HARD_SECTOR_2_NODE_FEAT_2_TITLE": "Victoria impecable",
+  "HARD_SECTOR_2_NODE_FEAT_2_DESCRIPTION": "Gana al menos 20 batallas sin perder unidades",
+  "HARD_SECTOR_2_NODE_FEAT_3_TITLE": "Aumento de blindaje",
+  "HARD_SECTOR_2_NODE_FEAT_3_DESCRIPTION": "Obtén aumento de defensa 60 veces",
+  "HARD_SECTOR_2_NODE_FEAT_4_TITLE": "Solo soldados imperiales",
+  "HARD_SECTOR_2_NODE_FEAT_4_DESCRIPTION": "Gana al menos 14 batallas con un escuadrón completo de unidades de soldados imperiales",
+  "HARD_SECTOR_2_MINIBOSS_FEAT_1_TITLE": "Retirada de la Base Eco",
+  "HARD_SECTOR_2_MINIBOSS_FEAT_1_DESCRIPTION": "Gana con el Capitán Han Solo con vida",
+  "HARD_SECTOR_2_MINIBOSS_FEAT_2_TITLE": "El fin de la Rebelión",
+  "HARD_SECTOR_2_MINIBOSS_FEAT_2_DESCRIPTION": "Gana sin usar rebeldes en tu escuadrón",
+  "HARD_SECTOR_2_BOSS_FEAT_1_TITLE": "Objetivo: Máximo poder de fuego",
+  "HARD_SECTOR_2_BOSS_FEAT_1_DESCRIPTION": "Gana con el General Veers y el soldado de las nieves con vida",
+  "HARD_SECTOR_2_BOSS_FEAT_2_TITLE": "Se acabó el imperio",
+  "HARD_SECTOR_2_BOSS_FEAT_2_DESCRIPTION": "Gana sin usar personajes del Imperio en tu escuadrón",
+
+  "SECTOR_3_TITLE": "Sector 3",
+  "HARD_SECTOR_3_NODE_FEAT_1_TITLE": "",
+  "HARD_SECTOR_3_NODE_FEAT_1_DESCRIPTION": "",
+  "HARD_SECTOR_3_NODE_FEAT_2_TITLE": "",
+  "HARD_SECTOR_3_NODE_FEAT_2_DESCRIPTION": "",
+  "HARD_SECTOR_3_NODE_FEAT_3_TITLE": "",
+  "HARD_SECTOR_3_NODE_FEAT_3_DESCRIPTION": "",
+  "HARD_SECTOR_3_NODE_FEAT_4_TITLE": "",
+  "HARD_SECTOR_3_NODE_FEAT_4_DESCRIPTION": "",
+  "HARD_SECTOR_3_MINIBOSS_FEAT_1_TITLE": "",
+  "HARD_SECTOR_3_MINIBOSS_FEAT_1_DESCRIPTION": "",
+  "HARD_SECTOR_3_MINIBOSS_FEAT_2_TITLE": "",
+  "HARD_SECTOR_3_MINIBOSS_FEAT_2_DESCRIPTION": "",
+  "HARD_SECTOR_3_BOSS_FEAT_1_TITLE": "",
+  "HARD_SECTOR_3_BOSS_FEAT_1_DESCRIPTION": "",
+  "HARD_SECTOR_3_BOSS_FEAT_2_TITLE": "",
+  "HARD_SECTOR_3_BOSS_FEAT_2_DESCRIPTION": "",
+
+  "SECTOR_4_TITLE": "Sector 4",
+  "HARD_SECTOR_4_NODE_FEAT_1_TITLE": "",
+  "HARD_SECTOR_4_NODE_FEAT_1_DESCRIPTION": "",
+  "HARD_SECTOR_4_NODE_FEAT_2_TITLE": "",
+  "HARD_SECTOR_4_NODE_FEAT_2_DESCRIPTION": "",
+  "HARD_SECTOR_4_NODE_FEAT_3_TITLE": "",
+  "HARD_SECTOR_4_NODE_FEAT_3_DESCRIPTION": "",
+  "HARD_SECTOR_4_NODE_FEAT_4_TITLE": "",
+  "HARD_SECTOR_4_NODE_FEAT_4_DESCRIPTION": "",
+  "HARD_SECTOR_4_MINIBOSS_FEAT_1_TITLE": "",
+  "HARD_SECTOR_4_MINIBOSS_FEAT_1_DESCRIPTION": "",
+  "HARD_SECTOR_4_MINIBOSS_FEAT_2_TITLE": "",
+  "HARD_SECTOR_4_MINIBOSS_FEAT_2_DESCRIPTION": "",
+  "HARD_SECTOR_4_BOSS_FEAT_1_TITLE": "",
+  "HARD_SECTOR_4_BOSS_FEAT_1_DESCRIPTION": "",
+  "HARD_SECTOR_4_BOSS_FEAT_2_TITLE": "",
+  "HARD_SECTOR_4_BOSS_FEAT_2_DESCRIPTION": "",
+
+  "SECTOR_5_TITLE": "Sector 5",
+  "HARD_SECTOR_5_NODE_FEAT_1_TITLE": "",
+  "HARD_SECTOR_5_NODE_FEAT_1_DESCRIPTION": "",
+  "HARD_SECTOR_5_NODE_FEAT_2_TITLE": "",
+  "HARD_SECTOR_5_NODE_FEAT_2_DESCRIPTION": "",
+  "HARD_SECTOR_5_NODE_FEAT_3_TITLE": "",
+  "HARD_SECTOR_5_NODE_FEAT_3_DESCRIPTION": "",
+  "HARD_SECTOR_5_NODE_FEAT_4_TITLE": "",
+  "HARD_SECTOR_5_NODE_FEAT_4_DESCRIPTION": "",
+  "HARD_SECTOR_5_MINIBOSS_FEAT_1_TITLE": "",
+  "HARD_SECTOR_5_MINIBOSS_FEAT_1_DESCRIPTION": "",
+  "HARD_SECTOR_5_MINIBOSS_FEAT_2_TITLE": "",
+  "HARD_SECTOR_5_MINIBOSS_FEAT_2_DESCRIPTION": "",
+  "HARD_SECTOR_5_BOSS_FEAT_1_TITLE": "",
+  "HARD_SECTOR_5_BOSS_FEAT_1_DESCRIPTION": "",
+  "HARD_SECTOR_5_BOSS_FEAT_2_TITLE": "",
+  "HARD_SECTOR_5_BOSS_FEAT_2_DESCRIPTION": "",
+
+  "SECTOR_GLOBAL_TITLE": "Logros de evento",
+  "HARD_SECTOR_GLOBAL_FEAT_1_TITLE": "Gran victoria",
+  "HARD_SECTOR_GLOBAL_FEAT_1_DESCRIPTION": "Derrota al menos a 500 enemigos",
+  "HARD_SECTOR_GLOBAL_FEAT_2_TITLE": "Vive la luz",
+  "HARD_SECTOR_GLOBAL_FEAT_2_DESCRIPTION": "Gana al menos 50 batallas con un escuadrón completo de unidades del Lado Luminoso",
+  "HARD_SECTOR_GLOBAL_FEAT_3_TITLE": "Sé que hay algo bueno en ti",
+  "HARD_SECTOR_GLOBAL_FEAT_3_DESCRIPTION": "Derrota a 100 enemigos con Darth Vader o con el Caballero Jedi Luke Skywalker",
+  "HARD_SECTOR_GLOBAL_FEAT_4_TITLE": "Una nueva esperanza",
+  "HARD_SECTOR_GLOBAL_FEAT_4_DESCRIPTION": "Gana 20 batallas con Luke Skywalker (granjero) y Obi-Wan Kenobi (viejo Ben)",
+  "HARD_SECTOR_GLOBAL_FEAT_5_TITLE": "Incursiona en la oscuridad",
+  "HARD_SECTOR_GLOBAL_FEAT_5_DESCRIPTION": "Gana al menos 50 batallas con un escuadrón completo de unidades del Lado Oscuro",
+  "HARD_SECTOR_GLOBAL_FEAT_6_TITLE": "Gran Conquista",
+  "HARD_SECTOR_GLOBAL_FEAT_6_DESCRIPTION": "Gana 250 batallas",
+  "HARD_SECTOR_GLOBAL_FEAT_7_TITLE": "Quiero mi armadura",
+  "HARD_SECTOR_GLOBAL_FEAT_7_DESCRIPTION": "Gana 20 batallas con El Mandaloriano (blindaje Beskar) y Boba Fett",
+  "HARD_SECTOR_GLOBAL_FEAT_8_TITLE": "Buen disparo",
+  "HARD_SECTOR_GLOBAL_FEAT_8_DESCRIPTION": "Obtén Aumento de crítico 20 veces. (Completa la hazaña \"Una nueva esperanza\" para conseguir el Disco de datos Aumento de crítico)",
+  "HARD_SECTOR_GLOBAL_FEAT_9_TITLE": "Poder ilimitado",
+  "HARD_SECTOR_GLOBAL_FEAT_9_DESCRIPTION": "Obtén Terriblemente abrumador 20 veces. (Completa la hazaña \"Sé que hay algo bueno en ti\" para conseguir el Disco de datos Terriblemente abrumador)"
 }
