--- a/locales/es.json
+++ b/locales/es.json
@@ -121,40 +121,40 @@
   "HARD_SECTOR_2_BOSS_FEAT_2_DESCRIPTION": "Gana sin usar personajes del Imperio en tu escuadrón",
 
   "SECTOR_3_TITLE": "Sector 3",
-  "HARD_SECTOR_3_NODE_FEAT_1_TITLE": "",
-  "HARD_SECTOR_3_NODE_FEAT_1_DESCRIPTION": "",
-  "HARD_SECTOR_3_NODE_FEAT_2_TITLE": "",
-  "HARD_SECTOR_3_NODE_FEAT_2_DESCRIPTION": "",
-  "HARD_SECTOR_3_NODE_FEAT_3_TITLE": "",
-  "HARD_SECTOR_3_NODE_FEAT_3_DESCRIPTION": "",
-  "HARD_SECTOR_3_NODE_FEAT_4_TITLE": "",
-  "HARD_SECTOR_3_NODE_FEAT_4_DESCRIPTION": "",
-  "HARD_SECTOR_3_MINIBOSS_FEAT_1_TITLE": "",
-  "HARD_SECTOR_3_MINIBOSS_FEAT_1_DESCRIPTION": "",
-  "HARD_SECTOR_3_MINIBOSS_FEAT_2_TITLE": "",
-  "HARD_SECTOR_3_MINIBOSS_FEAT_2_DESCRIPTION": "",
-  "HARD_SECTOR_3_BOSS_FEAT_1_TITLE": "",
-  "HARD_SECTOR_3_BOSS_FEAT_1_DESCRIPTION": "",
-  "HARD_SECTOR_3_BOSS_FEAT_2_TITLE": "",
-  "HARD_SECTOR_3_BOSS_FEAT_2_DESCRIPTION": "",
+  "HARD_SECTOR_3_NODE_FEAT_1_TITLE": "Disparo con suerte",
+  "HARD_SECTOR_3_NODE_FEAT_1_DESCRIPTION": "Asesta al menos 100 ataques en batallas que hayas ganado",
+  "HARD_SECTOR_3_NODE_FEAT_2_TITLE": "Pies ligeros",
+  "HARD_SECTOR_3_NODE_FEAT_2_DESCRIPTION": "Esquiva al menos 100 ataques en batallas que hayas ganado",
+  "HARD_SECTOR_3_NODE_FEAT_3_TITLE": "Bip bup",
+  "HARD_SECTOR_3_NODE_FEAT_3_DESCRIPTION": "Derrota a 50 enemigos con unidades droides",
+  "HARD_SECTOR_3_NODE_FEAT_4_TITLE": "Solo Jedi",
+  "HARD_SECTOR_3_NODE_FEAT_4_DESCRIPTION": "Gana al menos 14 batallas con un escuadrón completo de unidades Jedi",
+  "HARD_SECTOR_3_MINIBOSS_FEAT_1_TITLE": "Líder separatista",
+  "HARD_SECTOR_3_MINIBOSS_FEAT_1_DESCRIPTION": "Gana con el Conde Dooku y Nute Gunray con vida",
+  "HARD_SECTOR_3_MINIBOSS_FEAT_2_TITLE": "Por la República",
+  "HARD_SECTOR_3_MINIBOSS_FEAT_2_DESCRIPTION": "Gana sin usar separatistas en tu escuadrón",
+  "HARD_SECTOR_3_BOSS_FEAT_1_TITLE": "¿Qué tal?",
+  "HARD_SECTOR_3_BOSS_FEAT_1_DESCRIPTION": "Gana con el Caballero Jedi Anakin y el General Kenobi con vida",
+  "HARD_SECTOR_3_BOSS_FEAT_2_TITLE": "Solo soldados clon",
+  "HARD_SECTOR_3_BOSS_FEAT_2_DESCRIPTION": "Gana con un escuadrón completo de soldados clon",
 
   "SECTOR_4_TITLE": "Sector 4",
-  "HARD_SECTOR_4_NODE_FEAT_1_TITLE": "",
-  "HARD_SECTOR_4_NODE_FEAT_1_DESCRIPTION": "",
-  "HARD_SECTOR_4_NODE_FEAT_2_TITLE": "",
-  "HARD_SECTOR_4_NODE_FEAT_2_DESCRIPTION": "",
-  "HARD_SECTOR_4_NODE_FEAT_3_TITLE": "",
-  "HARD_SECTOR_4_NODE_FEAT_3_DESCRIPTION": "",
-  "HARD_SECTOR_4_NODE_FEAT_4_TITLE": "",
-  "HARD_SECTOR_4_NODE_FEAT_4_DESCRIPTION": "",
-  "HARD_SECTOR_4_MINIBOSS_FEAT_1_TITLE": "",
-  "HARD_SECTOR_4_MINIBOSS_FEAT_1_DESCRIPTION": "",
-  "HARD_SECTOR_4_MINIBOSS_FEAT_2_TITLE": "",
-  "HARD_SECTOR_4_MINIBOSS_FEAT_2_DESCRIPTION": "",
-  "HARD_SECTOR_4_BOSS_FEAT_1_TITLE": "",
-  "HARD_SECTOR_4_BOSS_FEAT_1_DESCRIPTION": "",
-  "HARD_SECTOR_4_BOSS_FEAT_2_TITLE": "",
-  "HARD_SECTOR_4_BOSS_FEAT_2_DESCRIPTION": "",
+  "HARD_SECTOR_4_NODE_FEAT_1_TITLE": "Tranquilidad forzada",
+  "HARD_SECTOR_4_NODE_FEAT_1_DESCRIPTION": "Intenta infligir bloqueo de habilidad 60 veces",
+  "HARD_SECTOR_4_NODE_FEAT_2_TITLE": "Solo Sith",
+  "HARD_SECTOR_4_NODE_FEAT_2_DESCRIPTION": "Gana al menos 14 batallas con un escuadrón completo de unidades Sith",
+  "HARD_SECTOR_4_NODE_FEAT_3_TITLE": "Un ejército de clones",
+  "HARD_SECTOR_4_NODE_FEAT_3_DESCRIPTION": "Derrota a 50 enemigos con soldados clon",
+  "HARD_SECTOR_4_NODE_FEAT_4_TITLE": "Acuerdos sombríos",
+  "HARD_SECTOR_4_NODE_FEAT_4_DESCRIPTION": "Obtén sigilo 40 veces",
+  "HARD_SECTOR_4_MINIBOSS_FEAT_1_TITLE": "Batalla por Kamino",
+  "HARD_SECTOR_4_MINIBOSS_FEAT_1_DESCRIPTION": "Gana con el Sargento clon - Fase I con vida",
+  "HARD_SECTOR_4_MINIBOSS_FEAT_2_TITLE": "Aplástalos",
+  "HARD_SECTOR_4_MINIBOSS_FEAT_2_DESCRIPTION": "Derrota al menos a 3 enemigos en el mismo turno",
+  "HARD_SECTOR_4_BOSS_FEAT_1_TITLE": "Uno por uno",
+  "HARD_SECTOR_4_BOSS_FEAT_1_DESCRIPTION": "Inflige marcado a al menos 3 enemigos",
+  "HARD_SECTOR_4_BOSS_FEAT_2_TITLE": "Ataque devastador",
+  "HARD_SECTOR_4_BOSS_FEAT_2_DESCRIPTION": "Causa el menos 200.000 de daño a un enemigo de un solo golpe",
 
   "SECTOR_5_TITLE": "Sector 5",
   "HARD_SECTOR_5_NODE_FEAT_1_TITLE": "",
