feat: texts of sectors 5 and normal mode

--- a/locales/en.json
+++ b/locales/en.json
@@ -157,22 +157,22 @@
   "HARD_SECTOR_4_BOSS_FEAT_2_DESCRIPTION": "Causa el menos 200.000 de daño a un enemigo de un solo golpe",
 
   "SECTOR_5_TITLE": "Sector 5",
-  "HARD_SECTOR_5_NODE_FEAT_1_TITLE": "",
-  "HARD_SECTOR_5_NODE_FEAT_1_DESCRIPTION": "",
-  "HARD_SECTOR_5_NODE_FEAT_2_TITLE": "",
-  "HARD_SECTOR_5_NODE_FEAT_2_DESCRIPTION": "",
-  "HARD_SECTOR_5_NODE_FEAT_3_TITLE": "",
-  "HARD_SECTOR_5_NODE_FEAT_3_DESCRIPTION": "",
-  "HARD_SECTOR_5_NODE_FEAT_4_TITLE": "",
-  "HARD_SECTOR_5_NODE_FEAT_4_DESCRIPTION": "",
-  "HARD_SECTOR_5_MINIBOSS_FEAT_1_TITLE": "",
-  "HARD_SECTOR_5_MINIBOSS_FEAT_1_DESCRIPTION": "",
-  "HARD_SECTOR_5_MINIBOSS_FEAT_2_TITLE": "",
-  "HARD_SECTOR_5_MINIBOSS_FEAT_2_DESCRIPTION": "",
-  "HARD_SECTOR_5_BOSS_FEAT_1_TITLE": "",
-  "HARD_SECTOR_5_BOSS_FEAT_1_DESCRIPTION": "",
-  "HARD_SECTOR_5_BOSS_FEAT_2_TITLE": "",
-  "HARD_SECTOR_5_BOSS_FEAT_2_DESCRIPTION": "",
+  "HARD_SECTOR_5_NODE_FEAT_1_TITLE": "Rompebeskar",
+  "HARD_SECTOR_5_NODE_FEAT_1_DESCRIPTION": "Inflige Armadura rota 20 veces",
+  "HARD_SECTOR_5_NODE_FEAT_2_TITLE": "Solo República Galáctica",
+  "HARD_SECTOR_5_NODE_FEAT_2_DESCRIPTION": "Gana al menos 14 batallas con un escuadrón completo de unidades de República Galáctica",
+  "HARD_SECTOR_5_NODE_FEAT_3_TITLE": "Una cosa tan tranquila",
+  "HARD_SECTOR_5_NODE_FEAT_3_DESCRIPTION": "Derrota a 50 enemigos con unidades de la Antigua República",
+  "HARD_SECTOR_5_NODE_FEAT_4_TITLE": "Torpe",
+  "HARD_SECTOR_5_NODE_FEAT_4_DESCRIPTION": "Intenta infligir reducción de evasión 40 veces",
+  "HARD_SECTOR_5_MINIBOSS_FEAT_1_TITLE": "Se acabó la fiesta",
+  "HARD_SECTOR_5_MINIBOSS_FEAT_1_DESCRIPTION": "Gana con Mace Windu con vida",
+  "HARD_SECTOR_5_MINIBOSS_FEAT_2_TITLE": "Larga vida al Imperio",
+  "HARD_SECTOR_5_MINIBOSS_FEAT_2_DESCRIPTION": "Gana con el Grand Moff Tarkin y el Moff Gideon con vida",
+  "HARD_SECTOR_5_BOSS_FEAT_1_TITLE": "Asalto protegido",
+  "HARD_SECTOR_5_BOSS_FEAT_1_DESCRIPTION": "Completa la batalla sin perder una unidad mientras haya al menos un atacante en el escuadrón",
+  "HARD_SECTOR_5_BOSS_FEAT_2_TITLE": "Sin apoyo",
+  "HARD_SECTOR_5_BOSS_FEAT_2_DESCRIPTION": "Gana sin usar unidades de apoyo en tu escuadrón",
 
   "SECTOR_GLOBAL_TITLE": "Logros de evento",
   "HARD_SECTOR_GLOBAL_FEAT_1_TITLE": "Gran victoria",
@@ -192,5 +192,89 @@
   "HARD_SECTOR_GLOBAL_FEAT_8_TITLE": "Buen disparo",
   "HARD_SECTOR_GLOBAL_FEAT_8_DESCRIPTION": "Obtén Aumento de crítico 20 veces. (Completa la hazaña \"Una nueva esperanza\" para conseguir el Disco de datos Aumento de crítico)",
   "HARD_SECTOR_GLOBAL_FEAT_9_TITLE": "Poder ilimitado",
-  "HARD_SECTOR_GLOBAL_FEAT_9_DESCRIPTION": "Obtén Terriblemente abrumador 20 veces. (Completa la hazaña \"Sé que hay algo bueno en ti\" para conseguir el Disco de datos Terriblemente abrumador)"
+  "HARD_SECTOR_GLOBAL_FEAT_9_DESCRIPTION": "Obtén Terriblemente abrumador 20 veces. (Completa la hazaña \"Sé que hay algo bueno en ti\" para conseguir el Disco de datos Terriblemente abrumador)",
+
+  "NORMAL_SECTOR_1_NODE_FEAT_1_TITLE": "Evasión anticipada",
+  "NORMAL_SECTOR_1_NODE_FEAT_1_DESCRIPTION": "Obtén previsión 40 veces",
+  "NORMAL_SECTOR_1_NODE_FEAT_2_TITLE": "Sin resguardo",
+  "NORMAL_SECTOR_1_NODE_FEAT_2_DESCRIPTION": "Gana 10 batallas sin tanques en tu escuadrón",
+  "NORMAL_SECTOR_1_NODE_FEAT_3_TITLE": "El gremio",
+  "NORMAL_SECTOR_1_NODE_FEAT_3_DESCRIPTION": "Derrota a 35 enemigos con unidades cazarrecompensas",
+  "NORMAL_SECTOR_1_MINIBOSS_FEAT_1_TITLE": "Suerte de quedar en una sola pieza",
+  "NORMAL_SECTOR_1_MINIBOSS_FEAT_1_DESCRIPTION": "Gana con URoRRuR'R'R con vida",
+  "NORMAL_SECTOR_1_BOSS_FEAT_1_TITLE": "Acepto las posibilidades",
+  "NORMAL_SECTOR_1_BOSS_FEAT_1_DESCRIPTION": "Gana con el Mandaloriano con vida",
+  "NORMAL_SECTOR_1_BOSS_FEAT_2_TITLE": "Hora de los aficionados",
+  "NORMAL_SECTOR_1_BOSS_FEAT_2_DESCRIPTION": "Gana sin usar ningún cazarrecompensas en tu escuadrón",
+
+  "NORMAL_SECTOR_2_NODE_FEAT_1_TITLE": "Solo soldados imperiales",
+  "NORMAL_SECTOR_2_NODE_FEAT_1_DESCRIPTION": "Gana al menos 7 batallas con un escuadrón completo de unidades de soldados imperiales",
+  "NORMAL_SECTOR_2_NODE_FEAT_2_TITLE": "Victoria impecable",
+  "NORMAL_SECTOR_2_NODE_FEAT_2_DESCRIPTION": "Gana al menos 10 batallas sin perder unidades",
+  "NORMAL_SECTOR_2_NODE_FEAT_3_TITLE": "Aumento de blindaje",
+  "NORMAL_SECTOR_2_NODE_FEAT_3_DESCRIPTION": "Obtén aumento de defensa 60 veces",
+  "NORMAL_SECTOR_2_MINIBOSS_FEAT_1_TITLE": "Retirada de la Base Eco",
+  "NORMAL_SECTOR_2_MINIBOSS_FEAT_1_DESCRIPTION": "Gana con el Capitán Han Solo con vida",
+  "NORMAL_SECTOR_2_BOSS_FEAT_1_TITLE": "Objetivo: Máximo poder de fuego",
+  "NORMAL_SECTOR_2_BOSS_FEAT_1_DESCRIPTION": "Gana con el General Veers y el soldado de las nieves con vida",
+  "NORMAL_SECTOR_2_BOSS_FEAT_2_TITLE": "Se acabó el imperio",
+  "NORMAL_SECTOR_2_BOSS_FEAT_2_DESCRIPTION": "Gana sin usar personajes del Imperio en tu escuadrón",
+
+  "NORMAL_SECTOR_3_NODE_FEAT_1_TITLE": "Disparo con suerte",
+  "NORMAL_SECTOR_3_NODE_FEAT_1_DESCRIPTION": "Asesta al menos 100 golpes críticos en batallas que hayas ganado",
+  "NORMAL_SECTOR_3_NODE_FEAT_2_TITLE": "Solo Jedi",
+  "NORMAL_SECTOR_3_NODE_FEAT_2_DESCRIPTION": "Gana al menos 7 batallas con un escuadrón completo de unidades Jedi",
+  "NORMAL_SECTOR_3_NODE_FEAT_3_TITLE": "Bip bup",
+  "NORMAL_SECTOR_3_NODE_FEAT_3_DESCRIPTION": "Derrota a 35 enemigos con unidades droides",
+  "NORMAL_SECTOR_3_MINIBOSS_FEAT_1_TITLE": "Líder separatista",
+  "NORMAL_SECTOR_3_MINIBOSS_FEAT_1_DESCRIPTION": "Gana con el Conde Dooku y Nute Gunray con vida",
+  "NORMAL_SECTOR_3_BOSS_FEAT_1_TITLE": "¿Qué tal?",
+  "NORMAL_SECTOR_3_BOSS_FEAT_1_DESCRIPTION": "Gana con el Caballero Jedi Anakin y el General Kenobi con vida",
+  "NORMAL_SECTOR_3_BOSS_FEAT_2_TITLE": "Solo soldados clon",
+  "NORMAL_SECTOR_3_BOSS_FEAT_2_DESCRIPTION": "Gana con un escuadrón completo de soldados clon",
+
+  "NORMAL_SECTOR_4_NODE_FEAT_1_TITLE": "Tranquilidad forzada",
+  "NORMAL_SECTOR_4_NODE_FEAT_1_DESCRIPTION": "Intenta infligir bloqueo de habilidad 40 veces",
+  "NORMAL_SECTOR_4_NODE_FEAT_2_TITLE": "Solo Sith",
+  "NORMAL_SECTOR_4_NODE_FEAT_2_DESCRIPTION": "Gana al menos 7 batallas con un escuadrón completo de unidades Sith",
+  "NORMAL_SECTOR_4_NODE_FEAT_3_TITLE": "Acuerdos sombríos",
+  "NORMAL_SECTOR_4_NODE_FEAT_3_DESCRIPTION": "Obtén sigilo 20 veces",
+  "NORMAL_SECTOR_4_MINIBOSS_FEAT_1_TITLE": "Batalla por Kamino",
+  "NORMAL_SECTOR_4_MINIBOSS_FEAT_1_DESCRIPTION": "Gana con el Sargento clon - Fase I con vida",
+  "NORMAL_SECTOR_4_BOSS_FEAT_1_TITLE": "Uno por uno",
+  "NORMAL_SECTOR_4_BOSS_FEAT_1_DESCRIPTION": "Inflige marcado a al menos 3 enemigos",
+  "NORMAL_SECTOR_4_BOSS_FEAT_2_TITLE": "Ataque devastador",
+  "NORMAL_SECTOR_4_BOSS_FEAT_2_DESCRIPTION": "Causa el menos 200.000 de daño a un enemigo de un solo golpe",
+
+  "NORMAL_SECTOR_5_NODE_FEAT_1_TITLE": "Torpe",
+  "NORMAL_SECTOR_5_NODE_FEAT_1_DESCRIPTION": "Intenta infligir reducción de evasión 30 veces",
+  "NORMAL_SECTOR_5_NODE_FEAT_2_TITLE": "Solo República Galáctica",
+  "NORMAL_SECTOR_5_NODE_FEAT_2_DESCRIPTION": "Gana al menos 7 batallas con un escuadrón completo de unidades de República Galáctica",
+  "NORMAL_SECTOR_5_NODE_FEAT_3_TITLE": "Una cosa tan tranquila",
+  "NORMAL_SECTOR_5_NODE_FEAT_3_DESCRIPTION": "Derrota a 35 enemigos con unidades de la Antigua República",
+  "NORMAL_SECTOR_5_MINIBOSS_FEAT_1_TITLE": "Se acabó la fiesta",
+  "NORMAL_SECTOR_5_MINIBOSS_FEAT_1_DESCRIPTION": "Gana con Mace Windu con vida",
+  "NORMAL_SECTOR_5_BOSS_FEAT_1_TITLE": "Asalto protegido",
+  "NORMAL_SECTOR_5_BOSS_FEAT_1_DESCRIPTION": "Completa la batalla sin perder una unidad mientras haya al menos un atacante en el escuadrón",
+  "NORMAL_SECTOR_5_BOSS_FEAT_2_TITLE": "Sin apoyo",
+  "NORMAL_SECTOR_5_BOSS_FEAT_2_DESCRIPTION": "Gana sin usar unidades de apoyo en tu escuadrón",
+
+  "NORMAL_SECTOR_GLOBAL_FEAT_1_TITLE": "Gran victoria",
+  "NORMAL_SECTOR_GLOBAL_FEAT_1_DESCRIPTION": "Derrota al menos a 500 enemigos",
+  "NORMAL_SECTOR_GLOBAL_FEAT_2_TITLE": "Vive la luz",
+  "NORMAL_SECTOR_GLOBAL_FEAT_2_DESCRIPTION": "Gana al menos 35 batallas con un escuadrón completo de unidades del Lado Luminoso",
+  "NORMAL_SECTOR_GLOBAL_FEAT_3_TITLE": "Sé que hay algo bueno en ti",
+  "NORMAL_SECTOR_GLOBAL_FEAT_3_DESCRIPTION": "Derrota a 50 enemigos con Darth Vader o con el Caballero Jedi Luke Skywalker",
+  "NORMAL_SECTOR_GLOBAL_FEAT_4_TITLE": "Una nueva esperanza",
+  "NORMAL_SECTOR_GLOBAL_FEAT_4_DESCRIPTION": "Gana 20 batallas con Luke Skywalker (granjero) y Obi-Wan Kenobi (viejo Ben)",
+  "NORMAL_SECTOR_GLOBAL_FEAT_5_TITLE": "Incursiona en la oscuridad",
+  "NORMAL_SECTOR_GLOBAL_FEAT_5_DESCRIPTION": "Gana al menos 35 batallas con un escuadrón completo de unidades del Lado Oscuro",
+  "NORMAL_SECTOR_GLOBAL_FEAT_6_TITLE": "Gran Conquista",
+  "NORMAL_SECTOR_GLOBAL_FEAT_6_DESCRIPTION": "Gana 200 batallas",
+  "NORMAL_SECTOR_GLOBAL_FEAT_7_TITLE": "Quiero mi armadura",
+  "NORMAL_SECTOR_GLOBAL_FEAT_7_DESCRIPTION": "Gana 10 batallas con El Mandaloriano (blindaje Beskar) y Boba Fett",
+  "NORMAL_SECTOR_GLOBAL_FEAT_8_TITLE": "Buen disparo",
+  "NORMAL_SECTOR_GLOBAL_FEAT_8_DESCRIPTION": "Obtén Aumento de crítico 10 veces. (Completa la hazaña \"Una nueva esperanza\" para conseguir el Disco de datos Aumento de crítico)",
+  "NORMAL_SECTOR_GLOBAL_FEAT_9_TITLE": "Poder ilimitado",
+  "NORMAL_SECTOR_GLOBAL_FEAT_9_DESCRIPTION": "Obtén Terriblemente abrumador 10 veces. (Completa la hazaña \"Sé que hay algo bueno en ti\" para conseguir el Disco de datos Terriblemente abrumador)"
 }
